fix: :sparkles: corousel overflow-x in mobile version :rocket:

--- a/qAtiva/frontend/src/app/components/template/footer/footer.component.css
+++ b/qAtiva/frontend/src/app/components/template/footer/footer.component.css
@@ -15,7 +15,8 @@ footer ul {
 }
 
 .logo {
-  width: 20rem;
+  width: 100%;
+  max-width: 20rem;
 }
 
 .address {
