--- a/qAtiva/frontend/src/app/components/template/slider/slider.component.css
+++ b/qAtiva/frontend/src/app/components/template/slider/slider.component.css
@@ -1,6 +1,1 @@
-.container-carousel {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+
