--- a/qAtiva/frontend/src/app/pages/home/home.component.css
+++ b/qAtiva/frontend/src/app/pages/home/home.component.css
@@ -1,3 +1,10 @@
+.box-slider {
+  width: 100%;
+  display: flex; 
+  justify-content: center;
+  align-items: center;
+}
+
 main {
   width: 100%;
   display: flex;
